# threat-hunter

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LEARNING_PROGRAM.md  README.md
.github/DISCUSSION_TEMPLATE/: daily-log.md  ideas.md  introductions.md  showcase.md  stuck.md
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  good-first-issue.md  learning-track.md  month5-feature.md
migrations/: 001_initial.sql
openclaw-skill/: SKILL.md
openclaw-skill/references/: commands.md
openclaw-skill/scripts/: hunt.sh
src/: ioc.rs  main.rs  network.rs  process.rs  report.rs  scanner.rs
src/agent/: client.rs  loop.rs  mod.rs  provider.rs  tools.rs
src/agent/providers/: claude.rs  mod.rs  openai.rs
src/commands/: agent.rs  findings.rs  mitre.rs  mod.rs  network.rs  process.rs  report.rs  scan.rs  siem.rs
src/db/: mod.rs
