[package]
name = "threat_hunter"
version = "0.1.0"
edition = "2021"
authors  = ["threat_hunter team"]
description = "A CLI threat hunting tool for IOC scanning, process analysis, network inspection and MITRE ATT&CK mapping"
license = "MIT"

# ─── Binary ──────────────────────────────────────────────────────────────────
[[bin]]
name = "threathunter"
path = "src/main.rs"

# ─── Runtime dependencies ─────────────────────────────────────────────────────

[dependencies]

# CLI
clap = { version = "4.5", features = ["derive", "color", "env"] }

# Terminal output
colored   = "2.1"
indicatif = "0.17"

# Serialisation (JSON output + serde derives on every Finding/Report struct)
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Config file support (rules path, SIEM endpoint, thresholds)
toml = "0.8"

# Timestamps on every finding and SIEM log query window
chrono = { version = "0.4", features = ["serde"] }

# File hashing — sha256 for modern feeds, md5 because legacy IOC feeds still use it
sha2  = "0.10"
md-5  = "0.10"
hex   = "0.4"

# Pattern matching inside files and log lines
regex = "1.10"

# Recursive directory traversal
walkdir = "2.5"

# Pretty ASCII tables for terminal output
tabled = "0.15"

# Error handling — anyhow at command layer, thiserror for typed errors in lib modules
anyhow    = "1.0"
thiserror = "1.0"

# One-time initialisation of static threat intel maps (IOC lists, MITRE data)
once_cell = "1.19"

# Parallel file scanning — rayon turns walkdir loop into a thread pool with one line
rayon = "1.10"

# Graceful Ctrl-C handling so the partial report is still written on interrupt
ctrlc = { version = "3.4", features = ["termination"] }

# Locate ~/.config/threathunter/ cross-platform
dirs = "5.0"

# Logging — Layer 1 (INFO), Layer 2 (WARN/ERROR), Layer 3 (DEBUG/TRACE)
log        = "0.4"
env_logger = "0.11"

# ── Agentic AI layer ──────────────────────────────────────────────────────────
# Async HTTP client for Claude API calls (tool use / function calling)
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Async runtime — reqwest async needs a Tokio executor
# We use #[tokio::main] only in the agent subcommand entry point
tokio = { version = "1.37", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }

# UUID for correlating tool_use call IDs between request and response
uuid = { version = "1.8", features = ["v4"] }

# ── Persistence layer (Phase 1) ───────────────────────────────────────────────
# Async SQLite via sqlx — compile-time query checking, tokio runtime
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "macros", "chrono", "uuid"] }

# Async trait support — needed for AiProvider trait with async methods
async-trait = "0.1"

# ─── Dev-only dependencies (tests, benchmarks) ───────────────────────────────

[dev-dependencies]
tempfile  = "3.10"   # create throwaway files/dirs inside unit tests
assert_cmd = "2.0"   # run the compiled binary as a subprocess in integration tests
predicates = "3.1"   # fluent assertions for assert_cmd ("output contains X")

# ─── Build profiles ───────────────────────────────────────────────────────────

[profile.dev]
opt-level = 0       # no optimisation — fast incremental builds during development
debug     = true    # full debug symbols — lets you use gdb/lldb on panics

[profile.release]
opt-level = 3       # maximum speed optimisation
lto       = true    # link-time optimisation — merges crates for smaller, faster binary
strip     = true    # strip debug symbols — reduces binary size by ~60%
codegen-units = 1   # single codegen unit — slower to compile but best runtime performance
panic     = "abort" # on panic: abort immediately instead of unwinding the stack
